--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#courses">Courses</a></li>
-                <li><a href="#certifications">Certifications</a></li>
-                <li><a href="#jobs">Jobs</a></li>
+                <!-- <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#jobs">Jobs</a></li> -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
