--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accounting Training | Debicred</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
 
@@ -23,17 +25,95 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="home">
+    <!-- <section id="home">
         <div class="hero-content">
             <h1>Start Your Accounting Career with Expert Training</h1>
 
             <a href="#contact" class="btn">Get Started</a>
         </div>
-    </section>
+    </section> -->
+
+    <!-- Hero Section -->
+<section id="hero">
+    <div class="container">
+        <h1>Welcome to <span>DebiCred</span></h1>
+        <p>Elevating your learning experience with us</p>
+    </div>
+</section>
+
+<!-- Why Choose Us Section -->
+<section id="why-choose-us">
+    <div class="container">
+        <h2 class="section-title">Why Choose Us?</h2>
+        <p class="section-description">
+            At <strong>DebiCred</strong>, we provide industry-relevant training in accounting and taxation, 
+            helping professionals and students gain the latest skills needed to succeed in the financial sector.
+        </p>
+        <div class="why-container">
+            <div class="why-box">
+                <h3>🔥 Industry-Focused Curriculum</h3>
+                <p>Stay ahead with updated content aligned with market trends.</p>
+            </div>
+            <div class="why-box">
+                <h3>📈 Career Growth</h3>
+                <p>Boost your resume with certifications and real-world projects.</p>
+            </div>
+            <div class="why-box">
+                <h3>🎓 Expert Mentorship</h3>
+                <p>Learn from seasoned professionals in the field.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Key Benefits Section -->
+<section id="key-benefits">
+    <div class="container">
+        <h2 class="section-title">What You’ll Get</h2>
+        <div class="benefits-container">
+            <div class="benefit">
+                <i class="fas fa-building"></i>
+                <h4>Practical, Hands-On Training</h4>
+                <p>Learn with real-world case studies & applications.</p>
+            </div>
+            <div class="benefit">
+                <i class="fas fa-certificate"></i>
+                <h4>Industry-Recognized Certification</h4>
+                <p>Enhance your credibility and career prospects.</p>
+            </div>
+            <div class="benefit">
+                <i class="fas fa-user-tie"></i>
+                <h4>Expert Mentorship</h4>
+                <p>Get guidance from top industry professionals.</p>
+            </div>
+            <div class="benefit">
+                <i class="fas fa-globe"></i>
+                <h4>Flexible Learning Options</h4>
+                <p>Attend online or offline classes as per your convenience.</p>
+            </div>
+            <div class="benefit">
+                <i class="fas fa-briefcase"></i>
+                <h4>Experience Certificate</h4>
+                <p>Showcase your hands-on expertise to potential employers.</p>
+            </div>
+            <div class="benefit">
+                <i class="fas fa-gavel"></i>
+                <h4>Government License</h4>
+                <p>Qualify to start your own professional taxation practice.</p>
+            </div>
+            <div class="benefit">
+                <i class="fas fa-headset"></i>
+                <h4>Lifetime Support</h4>
+                <p>Get continuous assistance and career support.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- certification marquee  -->
 <div class="logo-head">
-    <h1>Authorized Training Partner of CTDS
-    </h1></div>
+    Authorized Training Partner of CTDS
+    </div>
 
 <div class="logo-container">
     <div class="logo-head">
@@ -69,23 +149,43 @@
         <img src="ctdslogos/NIELIT LOGO (1) (11).png" alt="Logo 4">
         <img src="ctdslogos/telecome (1) (1) (10).png" alt="Logo 5">
     </div>
-</div>    <!-- Courses Section -->
-    <section id="courses">
-        <h2>Our Specialized Courses</h2>
+</div>
+<!-- Courses Section -->
+<section id="courses">
+    <div class="container">
+        <h2 class="section-title">Advance Your Accounting & Taxation Career</h2>
+        <div class="benefits-container">
+            <div class="benefit">
+                <img src="https://cdn-icons-png.flaticon.com/512/1828/1828640.png" alt="Professionals Icon">
+                <div>
+                    <h4>For Professionals</h4>
+                    <p>Upgrade your skills, stay ahead in the industry, and boost your earning potential.</p>
+                </div>
+            </div>
+            <div class="benefit">
+                <img src="https://cdn-icons-png.flaticon.com/512/3135/3135755.png" alt="Students Icon">
+                <div>
+                    <h4>For Students</h4>
+                    <p>Gain practical knowledge, enhance your resume, and kickstart a successful career.</p>
+                </div>
+            </div>
+        </div>
+        
+        
         <div class="courses-container">
             <div class="course-box">
-                <h3>GST Practitioner Course</h3>
-                <p>Comprehensive GST training with certification and a Government license.</p>
+                <h3>GST Practitioner</h3>
+                <p>Become a Certified GST Practitioner – Unlock Lucrative Career Opportunities!</p>
                 <a href="#contact" class="btn">Enroll Now</a>
             </div>
             <div class="course-box">
-                <h3>Tax Accountant Course</h3>
-                <p>Master income tax, corporate tax, and tax audits with expert guidance.</p>
+                <h3>Tax Accountant</h3>
+                <p>Become a Certified Tax Accountant – Your Path to a High-Paying Career</p>
                 <a href="#contact" class="btn">Enroll Now</a>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
 
 
     <!-- Contact Section -->
